--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,11 @@
 $primary-color: #282c34;
 $secondary-color: #61dafb;
 
-$typeface: 'Open Sans', sans-serif;
+$typeface: 'Brandon Grotesque', sans-serif;
 
-$text-size-xl: 64px;
-$text-size-l: 48px;
-$text-size-m: 16px;
+$text-size-xl: 68px;
+$text-size-l: 52px;
+$text-size-m: 22px;
 $text-size-2: 12px;
 
 $color-white: #ffffff;
