--- a/src/components/Screens/screen1.module.scss
+++ b/src/components/Screens/screen1.module.scss
@@ -10,13 +10,12 @@
   justify-content: center;
 }
 
-.right,
-.left {
+.content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  width: 50%;
+  width: 100%;
   flex-shrink: 0;
   flex-grow: 0;
   padding: $spacing-l;
