--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -11,11 +11,30 @@ html {
 }
 
 html, body {
-  position: relative;
+  position: absolute;
   margin: 0;
+  width: 100%;
+  height: 100%;
   letter-spacing: 0.1rem;
-  background-color: $color-background;
+  // background-color: $color-background;
   font-family: $typeface;
+}
+
+.App {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
+.bg-canvas {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .latin {
