--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,6 +10,7 @@ $text-size-2: 12px;
 
 $color-white: #ffffff;
 $color-black: #000000;
+$color-darkGrey: #333333;
 
 $color-background: $color-black;
 
