--- a/src/styles/type.scss
+++ b/src/styles/type.scss
@@ -29,3 +29,11 @@ p {
   letter-spacing: 0px;
   font-weight: normal;
 }
+
+.is-light-mode {
+  h1,
+  h2,
+  p {
+    color: $color-darkGrey;
+  }
+}
