--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -42,15 +42,15 @@ $font-path: "../assets/fonts" !default;
 ** Medium
 */
 
-// @font-face {
-//   font-family: 'Brandon Grotesque';
-//   src: url('#{$font-path}/BrandonGrotesque-Medium.woff2') format('woff2'),
-//       url('#{$font-path}/BrandonGrotesque-Medium.woff') format('woff'),
-//       url('#{$font-path}/BrandonGrotesque-Medium.ttf') format('truetype');
-//   font-weight: 500;
-//   font-style: normal;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: 'Brandon Grotesque';
+  src: url('#{$font-path}/BrandonGrotesque-Medium.woff2') format('woff2'),
+      url('#{$font-path}/BrandonGrotesque-Medium.woff') format('woff'),
+      url('#{$font-path}/BrandonGrotesque-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
 
 // @font-face {
 //   font-family: 'Brandon Grotesque';
