--- a/src/styles/type.scss
+++ b/src/styles/type.scss
@@ -1,39 +1,29 @@
 // @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600&display=swap');
 @import './variables';
+@import './mixins';
 
 h1 {
-  font-size: $text-size-xl;
-  line-height: 1.1em;
-  color: $color-white;
-  margin: 0 0 $spacing-l 0;
-  letter-spacing: 2px;
-  font-weight: bold;
-  text-transform: uppercase;
+  @include type-title-l;
 }
 
 h2 {
-  font-size: $text-size-l;
-  line-height: 1.1em;
-  color: $color-white;
-  margin: 0 0 $spacing-l 0;
-  letter-spacing: 2px;
-  font-weight: bold;
-  text-transform: uppercase;
+  @include type-title-m;
 }
 
 p {
-  font-size: $text-size-m;
-  line-height: 1.5em;
+  @include type-body;
+}
+
+a {
+  @include type-link;
+}
+
+h1, h2, h3, h4, p, a, li {
   color: $color-white;
-  margin: 0 0 $spacing-m 0;
-  letter-spacing: 0px;
-  font-weight: normal;
 }
 
 .is-light-mode {
-  h1,
-  h2,
-  p {
+  h1, h2, h3, h4, p, a, li {
     color: $color-darkGrey;
   }
 }
