--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -35,3 +35,100 @@
     max-width: 100%;
   }
 }
+
+.gradient1 {
+  color: $color-white;
+  background: -webkit-linear-gradient(90deg, #{$color-white}, #{$color-pink});
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.gradient2 {
+  color: $color-white;
+  background: -webkit-linear-gradient(90deg, #{$color-pink}, #{$color-white});
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.big1 {
+  font-size: 250px;
+  font-weight: 300;
+  text-align: center;
+  position: absolute;
+  top: 10vh;
+  left: 50%;
+  width: 100px;
+  margin-left: -40px;
+  margin-top: 10px;
+  line-height: 1;
+}
+
+.separator {
+  position: absolute;
+  width: 200vw;
+  // height: 100vh;
+  top: 425vh;
+  left: -50vw;
+  transform-origin: center top;
+  // background-color: $color-black;
+  border-top: 1px solid $color-white;
+  transform: rotate(-10deg);
+  // z-index: $layer-1;
+
+  .plusIcon {
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    top: 0;
+    left: 50%;
+    margin: -60px 0 0 -60px;
+    transform: rotate(10deg);
+
+    path {
+      stroke-width: 2px;
+      fill: none;
+      stroke: $color-white;
+    }
+  }
+
+  &.isLightMode {
+    background-color: $color-white;
+    border-top: 1px solid $color-black;
+    .plusIcon {
+      path {
+        stroke: $color-black;
+      }
+    }
+  }
+}
+
+
+.xlTitle {
+  font-size: $text-size-xl * 1.25;
+  line-height: 1.1em;
+  margin: 0 0 $spacing-l 0;
+  letter-spacing: 2px;
+  transition: color $transition-fast ease-in-out;
+  will-change: color;
+
+  .super {
+    position: relative;
+    display: inline-block;
+    font-size: $text-size-xl;
+    font-weight: bold;
+    transform: translate3d(0, -20px, 0)
+  }
+}
+
+.center {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  flex-grow: 0;
+  padding: $spacing-l;
+  pointer-events: none;
+  text-align: center;
+}
