--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -132,3 +132,21 @@
   pointer-events: none;
   text-align: center;
 }
+
+.virtuousCycle {
+  width: 100%;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
+  flex-grow: 0;
+  padding: $spacing-l;
+  pointer-events: none;
+  text-align: center;
+
+  svg {
+    width: 100%;
+  }
+}
