--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -162,6 +162,20 @@
   -webkit-text-fill-color: transparent;
 }
 
+.videoContainer {
+  position: relative;
+  width: 40%;
+  padding-top: 40%;
+  margin: -25vh 5% 0;
+
+  video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+}
 
 .xlTitle {
   font-size: $text-size-xl * 1.25;
