--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -212,6 +212,66 @@
   padding: $spacing-l;
   pointer-events: none;
   text-align: center;
+  
+  @include device-m {
+    padding: 0;
+  }
+
+  &.row {
+    flex-direction: row;
+    align-items: flex-end;
+    @include device-l {
+      align-items: flex-start;
+      flex-direction: column;
+    }
+  }
+
+  .left,
+  .right {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    width: 50%;
+    flex-shrink: 1;
+    text-align: left;
+    padding: 0 10% 0 0;
+
+    h2:last-child {
+      margin-bottom: 0;
+    }
+
+    p:last-child {
+      margin-bottom: 0;
+    }
+
+    @include device-l {
+      width: 70%;
+      padding: 0 10% 0 10%;
+
+      h2:last-child {
+        margin-bottom: $spacing-m;
+      }
+      
+      p:last-child {
+        margin-bottom: $spacing-m;
+      }
+    }
+    @include device-m {
+      width: 100%;
+      padding: 0 $spacing-m;
+    }
+  }
+
+  .left {
+    padding: 0 0 0 10%;
+    @include device-l {
+      padding: 0 0 0 10%;
+    }
+    @include device-m {
+      padding: 0 $spacing-m;
+    }
+  }
 }
 
 .virtuousCycle {
