--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -18,6 +18,7 @@ $color-background: $color-black;
 
 $spacing-xl: 60px;
 $spacing-l: 40px;
+$spacing-ml: 30px;
 $spacing-m: 20px;
 $spacing-s: 10px;
 
