--- a/src/components/Screens/screen.module.scss
+++ b/src/components/Screens/screen.module.scss
@@ -20,7 +20,7 @@
     flex-shrink: 0;
     flex-grow: 0;
     padding: 0 0 0 $spacing-m;
-    pointer-events: none;
+    // pointer-events: none;
 
     @include device-l {
       width: 55%;
@@ -210,7 +210,7 @@
   flex-shrink: 0;
   flex-grow: 0;
   padding: $spacing-l;
-  pointer-events: none;
+  // pointer-events: none;
   text-align: center;
   
   @include device-m {
