--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -81,3 +81,22 @@
     }
   }
 }
+
+:global {
+  .is-light-mode {
+    :local {
+      .buttonWrapper {
+        .button {
+          border: 1px solid $color-black;
+          svg {
+            mix-blend-mode: normal;
+            line,
+            path {
+              stroke: $color-black;
+            }
+          }
+        }
+      }
+    }
+  }
+}
