--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -25,6 +25,8 @@
     border-radius: 80px;
     border: 1px solid $color-white;
     cursor: pointer;
+    transition: border $transition-normal ease-in-out;
+    will-change: border;
 
     svg {
       position: absolute;
@@ -50,6 +52,8 @@
       line,
       path {
         stroke: $color-white;
+        transition: stroke $transition-normal ease-in-out;
+        will-change: stroke;
       }
     }
 
