--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -30,7 +30,7 @@
   letter-spacing: 2px;
   font-weight: bold;
   text-transform: uppercase;
-  transition: color $transition-fast ease-in-out;
+  transition: color $transition-normal ease-in-out;
   will-change: color;
   @include device-xl {
     font-size: $text-size-xl * 0.8;
@@ -47,7 +47,7 @@
   letter-spacing: 0px;
   font-weight: bold;
   text-transform: uppercase;
-  transition: color $transition-fast ease-in-out;
+  transition: color $transition-normal ease-in-out;
   will-change: color;
   @include device-xl {
     font-size: $text-size-l * 0.8;
@@ -64,7 +64,7 @@
   letter-spacing: 1px;
   font-weight: bold;
   text-transform: uppercase;
-  transition: color $transition-fast ease-in-out;
+  transition: color $transition-normal ease-in-out;
   will-change: color;
   @include device-xl {
     font-size: $text-size-ml * 0.8;
@@ -80,7 +80,7 @@
   margin: 0 0 $spacing-m 0;
   letter-spacing: 0px;
   font-weight: normal;
-  transition: color $transition-fast ease-in-out;
+  transition: color $transition-normal ease-in-out;
   will-change: color;
   @include device-xl {
     font-size: $text-size-m * 0.8;
@@ -96,10 +96,21 @@
   margin: 0;
   letter-spacing: 0px;
   font-weight: 500;
-  transition: color $transition-fast ease-in-out;
+  transition: color $transition-normal ease-in-out;
   will-change: color;
 
   &:hover {
     cursor: pointer;
+  }
+}
+
+@mixin type-footer {
+  font-family: 'DIN Condensed';
+  font-size: $text-size-ml;
+  font-weight: bold;
+  transition: color $transition-normal ease-in-out;
+  will-change: color;
+  @include device-m {
+    font-size: $text-size-m;
   }
 }
