--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -3,10 +3,10 @@
 
 @keyframes rotate {
   from {
-    transform: translate3d(0, 1px, 0) rotate(0deg);
+    transform: translate3d(0, 1px, 0) rotate(0deg) scale(0.9);
   }
   to {
-    transform: translate3d(0, 1px, 0) rotate(360deg);
+    transform: translate3d(0, 1px, 0) rotate(360deg) scale(0.9);
   }
 }
 
@@ -28,7 +28,8 @@
     transition: border $transition-normal ease-in-out;
     will-change: border;
 
-    svg {
+    svg, 
+    img {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -47,7 +48,7 @@
         animation-name: rotate;
         animation-iteration-count: infinite;
         animation-timing-function: linear;
-        transform: scale(1.18)
+        transform: scale(0.9)
       }
       line,
       path {
@@ -73,11 +74,9 @@
     }
     
     &:hover {
-      svg {
-        &.cta {
-          transition-delay: $transition-fast;
-          opacity: 1;
-        }
+      .cta {
+        transition-delay: $transition-fast;
+        opacity: 1;
       }
       .inside {
         transform: scale(1);
